@@ -71,6 +71,7 @@
 
 #define OPENSSL_FIPSAPI
 
+#include <string.h>
 #include "ec_lcl.h"
 #include <openssl/err.h>
 #include <openssl/obj_mac.h>
@@ -2160,3 +2161,51 @@ size_t EC_get_builtin_curves(EC_builtin_curve *r, size_t nitems)
 
 	return curve_list_length;
 	}
+
+/* Functions to translate between common NIST curve names and NIDs */
+
+typedef struct {
+	const char *name;	/* NIST Name of curve */
+	int	nid;		/* Curve NID */
+} EC_NIST_NAME;
+
+static EC_NIST_NAME nist_curves[] = {
+	{"B-163", NID_sect163r2},
+	{"B-233", NID_sect233r1},
+	{"B-283", NID_sect283r1},
+	{"B-409", NID_sect409r1},
+	{"B-571", NID_sect571r1},
+	{"K-163", NID_sect163k1},
+	{"K-233", NID_sect233k1},
+	{"K-283", NID_sect283k1},
+	{"K-409", NID_sect409k1},
+	{"K-571", NID_sect571k1},
+	{"P-192", NID_X9_62_prime192v1},
+	{"P-224", NID_secp224r1},
+	{"P-256", NID_X9_62_prime256v1},
+	{"P-384", NID_secp384r1},
+	{"P-521", NID_secp521r1}
+};
+
+const char *EC_curve_nid2nist(int nid)
+	{
+	size_t i;
+	for (i = 0; i < sizeof(nist_curves)/sizeof(EC_NIST_NAME); i++)
+		{
+		if (nist_curves[i].nid == nid)
+			return nist_curves[i].name;
+		}
+	return NULL;
+	}
+
+int EC_curve_nist2nid(const char *name)
+	{
+	size_t i;
+	for (i = 0; i < sizeof(nist_curves)/sizeof(EC_NIST_NAME); i++)
+		{
+		if (!strcmp(nist_curves[i].name, name))
+			return nist_curves[i].nid;
+		}
+	return NID_undef;
+	}
+
