@@ -177,6 +177,7 @@ int ECPKParameters_print(BIO *bp, const EC_GROUP *x, int off)
 		{
 		/* the curve parameter are given by an asn1 OID */
 		int nid;
+		const char *nname;
 
 		if (!BIO_indent(bp, off, 128))
 			goto err;
@@ -184,11 +185,18 @@ int ECPKParameters_print(BIO *bp, const EC_GROUP *x, int off)
 		nid = EC_GROUP_get_curve_name(x);
 		if (nid == 0)
 			goto err;
-
 		if (BIO_printf(bp, "ASN1 OID: %s", OBJ_nid2sn(nid)) <= 0)
 			goto err;
 		if (BIO_printf(bp, "\n") <= 0)
 			goto err;
+		nname = EC_curve_nid2nist(nid);
+		if (nname)
+			{
+			if (!BIO_indent(bp, off, 128))
+				goto err;
+			if (BIO_printf(bp, "NIST CURVE: %s\n", nname) <= 0)
+				goto err;
+			}
 		}
 	else
 		{
